[package]
name = "koharu-web"
version = "0.22.0"
edition = "2024"

[dependencies]
koharu = { path = "../koharu", default-features = false }
koharu-core = { path = "../koharu-core", default-features = false }
koharu-runtime = { path = "../koharu-runtime", default-features = false }
koharu-ml = { path = "../koharu-ml", default-features = false }
koharu-renderer = { path = "../koharu-renderer", default-features = false }
clap = { version = "4.5", features = ["derive"] }
windows-sys = "0.61"

actix-web = "4"
actix-multipart = "0.6"
actix-files = "0.6"
tokio = { version = "1.44", features = ["full"] }
image = "0.25"
anyhow = "1.0"
tracing = "0.1"
blake3 = "1.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1.21"
dirs = "6.0"

[features]
default = ["cuda", "cudnn"]
cuda = ["koharu-ml/cuda", "koharu-ml/cudnn"]
cudnn = ["koharu-ml/cudnn"]

